# hackathon-spring-2025

./: .gitignore  README.md
backend/: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
backend/src/: config.py  main.py  permissions.py
backend/src/database/: config.py
backend/src/database/model/: role.py  user.py
backend/src/database/models/: __init__.py  material.py  meeting.py  question.py  role.py  user.py  user_meeting.py  user_role.py  vote.py
backend/src/migration/: env.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 70c2bee74e87_.py  7b80efb9fe3c_.py  95f687dab10a_.py  b405795e4046_init_revision.py  b60b0e396e04_.py  cf05775fc40d_.py  e5f018fe6c43_.py
backend/src/models/: auth_model.py
backend/src/repositories/: admin_repository.py  auth_repository.py  meeting_repository.py  question_repository.py  vote_repository.py
backend/src/repository/: auth_repository.py
backend/src/router/: auth_router.py
backend/src/routers/: __init__.py  admin_router.py  auth_router.py  meeting_router.py  question_router.py
backend/src/schemas/: admin_schema.py  auth_schema.py  meeting_schema.py  question_schema.py
backend/src/seeds/v1/: create.py  data.py
backend/src/util/security/: middleware.py
backend/src/utils/notification/: mail.py  mail_content.py
backend/src/utils/security/: decorator.py  middleware.py  password.py  token.py
backend/src/utils/storage/: storage.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
(+68 files in other folders)
